k8s/optional/ingress-grafana.yaml
#
# Copyright (c) 2020,2021 Oracle and/or its affiliates.
#
# Licensed under the Universal Permissive License v 1.0 as shown at
# https://oss.oracle.com/licenses/upl.
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  rules:
  - host: grafana.${SOCKSHOP_DOMAIN:=sockshop.helidon.io}
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: grafana
            port:
              number: 3000
  - host: prometheus.${SOCKSHOP_DOMAIN:=sockshop.helidon.io}
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus-operated
            port:
              number: 9090
